add expenseSplitter action

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@langchain/core": "^0.3.19",
     "@langchain/langgraph": "^0.2.21",
     "@langchain/openai": "^0.3.14",
+    "@upstash/redis": "^1.35.6",
     "@xmtp/agent-sdk": "^1.1.4",
     "@xmtp/content-type-transaction-reference": "^2.0.2",
     "@xmtp/content-type-wallet-send-calls": "^2.0.0",
