--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@xmtp/content-type-transaction-reference": "^2.0.2",
     "@xmtp/content-type-wallet-send-calls": "^2.0.0",
     "dotenv": "^16.4.5",
-    "zod": "^3.22.4",
-    "viem": "^2.22.16"
+    "viem": "^2.22.16",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
@@ -36,4 +36,3 @@
     "typescript": "^5.3.3"
   }
 }
-
