add poll action

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "@coinbase/agentkit": "latest",
     "@coinbase/agentkit-langchain": "latest",
-    "@coinbase/onchainkit": "^0.36.11",
+    "@coinbase/onchainkit": "^1.1.1",
     "@langchain/core": "^0.3.19",
     "@langchain/langgraph": "^0.2.21",
     "@langchain/openai": "^0.3.14",
     "@upstash/redis": "^1.35.6",
-    "@xmtp/agent-sdk": "^1.1.7",
+    "@xmtp/agent-sdk": "^1.1.8",
+    "@xmtp/content-type-markdown": "^1.0.0",
     "@xmtp/content-type-primitives": "^2.0.2",
     "@xmtp/content-type-reaction": "^2.0.2",
     "@xmtp/content-type-transaction-reference": "^2.0.2",
