add welcome message

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "build": "tsc",
     "start": "NODE_OPTIONS='--no-warnings' tsx ./chatbot.ts",
-    "dev": "nodemon --watch '*.ts' --watch 'scripts/**/*.ts' --ignore dist/ --exec 'npm run build && tsx dist/chatbot.js'",
-    "gen:keys": "npm run build && node dist/scripts/generate-keys.js",
+    "dev": "nodemon --watch '*.ts' --watch 'scripts/**/*.ts' --ignore dist/ --exec 'pnpm run build && tsx dist/chatbot.js'",
+    "gen:keys": "pnpm run build && node dist/scripts/generate-keys.js",
+    "upload:pinata": "pnpm run build && node dist/scripts/uploadToPinata.js",
     "lint": "eslint -c .eslintrc.json *.ts",
     "lint:fix": "eslint -c .eslintrc.json *.ts --fix",
     "format": "prettier --write \"**/*.{ts,js,cjs,json,md}\"",
@@ -27,9 +28,12 @@
     "@xmtp/content-type-markdown": "^1.0.0",
     "@xmtp/content-type-primitives": "^2.0.2",
     "@xmtp/content-type-reaction": "^2.0.2",
+    "@xmtp/content-type-remote-attachment": "^2.0.2",
     "@xmtp/content-type-transaction-reference": "^2.0.2",
     "@xmtp/content-type-wallet-send-calls": "^2.0.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "form-data": "^4.0.0",
     "viem": "^2.38.3",
     "zod": "^3.22.4"
   },
